# words_bot

./: .gitignore  Makefile  pyproject.toml
migration/: env.py
migration/versions/: init_user_model.py  room_word_tables.py
src/: config.py  database.py  main.py
src/handlers/: general.py
src/models/: base.py  room.py  rooms_words.py  user.py  word.py
src/repositories/: user.py
src/services/: user.py
